--- a/MVC_pattern/MvcCar/Views/HELLO/Index.cshtml
+++ b/MVC_pattern/MvcCar/Views/HELLO/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Car List";
 }
 
-<h2>Index</h2>
+<h2>MY Car List</h2>
 
 <p>Hello from our View Template!</p>
