--- a/MVC_pattern/MvcCar/Views/Shared/_Layout.cshtml
+++ b/MVC_pattern/MvcCar/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MvcCar</title>
+    <title>@ViewData["Title"] - Car App</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">MvcCar</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Car App</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -44,7 +44,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2019 - MvcCar</p>
+            <p>&copy; 2019 - Car App</p>
         </footer>
     </div>
 
