--- a/MVC_pattern/MvcCar/Views/Cars/Delete.cshtml
+++ b/MVC_pattern/MvcCar/Views/Cars/Delete.cshtml
@@ -35,6 +35,12 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Size)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Size)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
