--- a/MVC_pattern/MvcCar/Views/Cars/Details.cshtml
+++ b/MVC_pattern/MvcCar/Views/Cars/Details.cshtml
@@ -34,6 +34,12 @@
         <dd>
             @Html.DisplayFor(model => model.Price)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Size)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Size)
+        </dd>
     </dl>
 </div>
 <div>
