--- a/MVC_pattern/MvcCar/Views/Cars/Create.cshtml
+++ b/MVC_pattern/MvcCar/Views/Cars/Create.cshtml
@@ -33,6 +33,11 @@
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Size" class="control-label"></label>
+                <input asp-for="Size" class="form-control" />
+                <span asp-validation-for="Size" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
